changed ip addresses to host names

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -85,7 +85,7 @@
 
 
 
-			var connection = new WebSocket("ws://192.168.42.150:8784");  
+			var connection = new WebSocket("ws://relay.greenhouse:8784");  
 			//var connection = new WebSocket("ws://localhost:8181");  
 			connection.onopen = function(){  
 			    console.log('Socket has been opened!');  
