--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -94,7 +94,7 @@
 			   console.log('Connection closed');
 			}
 			connection.onmessage = function(msg){  
-				console.log(JSON.stringify(msg.data));
+				console.log(JSON.stringify(msg));
 			 livedata = JSON.parse(msg.data);
 			 console.log('livedata: '+msg.data);
 			 temp = livedata['sensorData'];
@@ -104,8 +104,8 @@
 			  	dataStream.y = parseFloat(livedata['sensorData']);
 			  	update(dataStream);
 			    document.getElementById('current').innerHTML = temp + ' C';
-			    document.getElementById('24min').innerHTML = livedata['24hourMin'] + ' C';
-			    document.getElementById('24max').innerHTML = livedata['24hourMax'] + ' C';
+			    document.getElementById('24hourMin').innerHTML = livedata['24hourMin'] + ' C';
+			    document.getElementById('24hourMax').innerHTML = livedata['24hourMax'] + ' C';
 			   
 			}  
 			// Log errors
