--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -6,7 +6,6 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="rickshaw-master/rickshaw.min.css">
-    <link rel="stylesheet" href="js/jQRangeSlider-5.1/css/classic.css" type="text/css" />
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
 
 	<script src="http://d3js.org/d3.v3.min.js"></script>
@@ -45,13 +44,15 @@
 			var hoverDetail;
 			var highlighter;
 			var temp;
+			var tv = 250;
 
 			function update(dataStream)	{
 				console.log(dataStream);
 				console.log(data);
 				data.push(dataStream);
 			   // data.shift();
-
+			   
+			   
 			   if(graphEnabled==false) {
 					 graph = new Rickshaw.Graph( {
 					        element: document.querySelector("#chart"),
@@ -59,10 +60,11 @@
 					        width: 580,
 					        min: -5,
 					        height: 250,
-					        series: [ {
-					                color: 'steelblue',
-					                data: data
-					        } ]
+					        series: new Rickshaw.Series.FixedDuration([{ name: 'Temp' }], undefined, {
+								timeInterval: tv,
+								maxDataPoints: 10000,
+								timeBase: new Date().getTime() / 1000
+							}) 
 					} );
 
 					 x_axis = new Rickshaw.Graph.Axis.Time( { 
@@ -86,7 +88,7 @@
 
 					graphEnabled = true;
 				};
-
+				 graph.series.addData(data);
 				 graph.render();
 			};
 
